--- a/ciphera/htmls/GAN_이미지분류_탐구보고서.html
+++ b/ciphera/htmls/GAN_이미지분류_탐구보고서.html
@@ -73,15 +73,15 @@
 
         <div class="image-container">
             <figure>
-                <img src="images/1-suhang1.jpg" alt="학습용 데이터 예시">
+                <img src="ciphera/image/1-suhang1.jpg.jpg" alt="학습용 데이터 예시">
                 <figcaption>① 학습용 (Train) 데이터에 사용된 이미지 예시</figcaption>
             </figure>
             <figure>
-                <img src="images/2-suhang1.jpg" alt="테스트 데이터 예시 1">
+                <img src="ciphera/image/2-suhang1.jpg.jpg" alt="테스트 데이터 예시 1">
                 <figcaption>② 테스트용 (Test) 데이터 예시 1</figcaption>
             </figure>
             <figure>
-                <img src="images/3-suhang1.jpg" alt="테스트 데이터 예시 2">
+                <img src="ciphera/image/3-suhang1.jpg.jpg" alt="테스트 데이터 예시 2">
                 <figcaption>③ 테스트용 (Test) 데이터 예시 2</figcaption>
             </figure>
         </div>
